err/curryproxy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/WebOb-1.2.3.egg-info'...
Listing './lib/python3.5/site-packages/curryproxy'...
Listing './lib/python3.5/site-packages/curryproxy/responses'...
Listing './lib/python3.5/site-packages/curryproxy/routes'...
Listing './lib/python3.5/site-packages/curryproxy/tests'...
Listing './lib/python3.5/site-packages/curryproxy/tests/curryproxy'...
Listing './lib/python3.5/site-packages/curryproxy/tests/curryproxy/CurryProxy'...
Listing './lib/python3.5/site-packages/curryproxy/tests/helpers'...
Listing './lib/python3.5/site-packages/curryproxy/tests/helpers/ReprString'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/error_response'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/error_response/ErrorResponse'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/metadata_response'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/metadata_response/MetadataResponse'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/multiple_response'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/multiple_response/MultipleResponse'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/response_base'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/response_base/ResponseBase'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/single_response'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/single_response/SingleResponse'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/status_response'...
Listing './lib/python3.5/site-packages/curryproxy/tests/responses/status_response/StatusResponse'...
Listing './lib/python3.5/site-packages/curryproxy/tests/routes'...
Listing './lib/python3.5/site-packages/curryproxy/tests/routes/endpoints_route'...
Listing './lib/python3.5/site-packages/curryproxy/tests/routes/endpoints_route/EndpointsRoute'...
Listing './lib/python3.5/site-packages/curryproxy/tests/routes/forwarding_route'...
Listing './lib/python3.5/site-packages/curryproxy/tests/routes/forwarding_route/ForwardingRoute'...
Listing './lib/python3.5/site-packages/curryproxy/tests/routes/route_base'...
Listing './lib/python3.5/site-packages/curryproxy/tests/routes/route_base/RouteBase'...
Listing './lib/python3.5/site-packages/curryproxy/tests/routes/route_factory'...
Listing './lib/python3.5/site-packages/curryproxy/tests/routes/status_route'...
Listing './lib/python3.5/site-packages/curryproxy/tests/routes/status_route/StatusRoute'...
Listing './lib/python3.5/site-packages/curryproxy-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/grequests-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/charade'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-2.2.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
